fixed anchor tags redirect on mobile

--- a/stylesheets/media-queries.css
+++ b/stylesheets/media-queries.css
@@ -13,6 +13,10 @@
 
 @media (max-width: 480px){
 
+    a{
+        z-index: 50;
+    }
+
     #header .navbar{
         display: flex;
         flex-direction: column;
