--- a/stylesheets/utilities.css
+++ b/stylesheets/utilities.css
@@ -51,6 +51,8 @@ h3{
 
 a{
     text-decoration: none;
+    z-index: 5000;
+    cursor: pointer;
 }
 
 /* BUTTONS */
